--- a/index.ipynb
+++ b/index.ipynb
@@ -248,12 +248,22 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'NYC'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hometown = 'NYC'"
+    "hometown = 'NYC'\n",
+    "hometown"
    ]
   },
   {
